# libiconv-for-Windows

./: .gitignore  CMakeLists.txt  LibIconv.sln  README.md  ReleaseNote  libiconv.vcxproj  libiconv.vcxproj.filters
.github/workflows/: msbuild.yml
helper/: README.md  mingw64_vc2022.cmd  mingw64_vc2026.cmd
libiconv/: ChangeLog  Makefile  config.h  config.status  libtool
libiconv/include/: iconv.build.h  iconv.h  iconv.h.inst
libiconv/install-tests/: Makefile
libiconv/lib/: Makefile  aliases.h  aliases_sysaix.h  aliases_syshpux.h  aliases_sysosf1.h  aliases_syssolaris.h  compat.c  config.h  iconv.c  translit.h
libiconv/libcharset/: ChangeLog  Makefile  autogen.sh  config.h  config.status  libtool
libiconv/libcharset/include/: libcharset.build.h  localcharset.build.h
libiconv/libcharset/lib/: ChangeLog  Makefile  localcharset.c  relocatable-stub.c
libiconv/man/: Makefile
libiconv/po/: Makefile  Makefile.in
libiconv/src/: Makefile
libiconv/srclib/: Makefile
libiconv/tests/: Makefile
libiconv/windows/: libiconv.rc
res/: libiconv.rc
